--- a/public_html/createContact.html
+++ b/public_html/createContact.html
@@ -1,5 +1,4 @@
 <section id="radio_buttons" class="row">
-    <hr>
     <h2>Craete new Contact</h2>
     <div class="col col-5-of-12 v-center">
 
@@ -68,5 +67,16 @@
             <label class="input-label" for="error7">Postcode</label>
             <input id="postcode" type="text" class="formjs formjs-error disableonfocus" placeholder="Postcode">
         </div>
+    </div>
+
+</section>
+<section id="adress" class="row">
+    <div class="col col-5-of-12 v-center">
+        <br>
+        <button id="logoutBtn" onclick="toStart()" type="submit" class="formjs formjs-primary formjs-block">Zurück zur Startseite</button>
+    </div>
+    <div class="col col-5-of-12 v-center">
+        <br>
+        <button id="logoutBtn" onclick="logout()" type="submit" class="formjs formjs-primary formjs-block">Ausloggen</button>
     </div>
 </section>
