--- a/public_html/index.html
+++ b/public_html/index.html
@@ -45,6 +45,8 @@ and open the template in the editor.
                     families: ['Merienda', 'Quicksand']
                 }
             });
+            //var pageContent = "index.html";
+            //window.sessionStorage.setItem('content', 'index.html');
 	</script>
 
     </head>
