--- a/public_html/getContact.html
+++ b/public_html/getContact.html
@@ -1,1 +1,12 @@
-<div>TODO write content</div>
+<script type="text/javascript" src="js/getContactCtrl.js"></script>
+
+<section id="adress" class="row">
+    <div class="col col-5-of-12 v-center">
+        <br>
+        <button id="logoutBtn" onclick="backToStart()" type="submit" class="formjs formjs-primary formjs-block">Zurück zur Startseite</button>
+    </div>
+    <div class="col col-5-of-12 v-center">
+        <br>
+        <button id="logoutBtn" onclick="logout()" type="submit" class="formjs formjs-primary formjs-block">Ausloggen</button>
+    </div>
+</section>
